src/test/ui/reachable/expr_repeat.stderr
error: unreachable expression
  --> $DIR/expr_repeat.rs:9:25
   |
LL |     let x: [usize; 2] = [return; 2];
   |                         ^^^^^^^^^^^
   |
note: lint level defined here
  --> $DIR/expr_repeat.rs:4:9
   |
LL | #![deny(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^
note: any code following this expression is unreachable
  --> $DIR/expr_repeat.rs:9:26
   |
LL |     let x: [usize; 2] = [return; 2];
   |                          ^^^^^^

error: aborting due to previous error

